Bug: horizontal scroll removed.

--- a/src/styles.css
+++ b/src/styles.css
@@ -308,7 +308,6 @@ img {
   margin-top: 100px;
   padding: 25px;
   text-align: center;
-  width: 100%;
   position: relative;
 }
 
